src/test/rustdoc-ui/intra-link-errors.stderr
error: unresolved link to `path::to::nonexistent::module`
  --> $DIR/intra-link-errors.rs:7:6
   |
LL | /// [path::to::nonexistent::module]
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ there is no item named `path` in scope
   |
note: the lint level is defined here
  --> $DIR/intra-link-errors.rs:1:9
   |
LL | #![deny(broken_intra_doc_links)]
   |         ^^^^^^^^^^^^^^^^^^^^^^
   = help: did you mean to import `path`?

error: unresolved link to `path::to::nonexistent::macro`
  --> $DIR/intra-link-errors.rs:12:6
   |
LL | /// [path::to::nonexistent::macro!]
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ there is no item named `path` in scope
   |
   = help: did you mean to import `path`?

error: unresolved link to `path::to::nonexistent::type`
  --> $DIR/intra-link-errors.rs:17:6
   |
LL | /// [type@path::to::nonexistent::type]
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ there is no item named `path` in scope
   |
   = help: did you mean to import `path`?

error: unresolved link to `std::io::not::here`
  --> $DIR/intra-link-errors.rs:22:6
   |
LL | /// [std::io::not::here]
   |      ^^^^^^^^^^^^^^^^^^ there is no item named `not` in scope
   |
   = help: did you mean to import `not`?

error: unresolved link to `std::io::not::here`
  --> $DIR/intra-link-errors.rs:27:6
   |
LL | /// [type@std::io::not::here]
   |      ^^^^^^^^^^^^^^^^^^^^^^^ there is no item named `not` in scope
   |
   = help: did you mean to import `not`?

error: unresolved link to `std::io::Error::x`
  --> $DIR/intra-link-errors.rs:32:6
   |
LL | /// [std::io::Error::x]
   |      ^^^^^^^^^^^^^^^^^ the struct `Error` has no field or associated item named `x`

error: unresolved link to `std::io::ErrorKind::x`
  --> $DIR/intra-link-errors.rs:36:6
   |
LL | /// [std::io::ErrorKind::x]
   |      ^^^^^^^^^^^^^^^^^^^^^ the enum `ErrorKind` has no variant or associated item named `x`

error: unresolved link to `f::A`
  --> $DIR/intra-link-errors.rs:40:6
   |
LL | /// [f::A]
   |      ^^^^ `f` is a function, not a module or type, and cannot have associated items

error: unresolved link to `f::A`
  --> $DIR/intra-link-errors.rs:44:6
   |
LL | /// [f::A!]
   |      ^^^^^ `f` is a function, not a module or type, and cannot have associated items

error: unresolved link to `S::A`
  --> $DIR/intra-link-errors.rs:48:6
   |
LL | /// [S::A]
   |      ^^^^ the struct `S` has no field or associated item named `A`

error: unresolved link to `S::fmt`
  --> $DIR/intra-link-errors.rs:52:6
   |
LL | /// [S::fmt]
   |      ^^^^^^ the struct `S` has no field or associated item named `fmt`

error: unresolved link to `E::D`
  --> $DIR/intra-link-errors.rs:56:6
   |
LL | /// [E::D]
   |      ^^^^ the enum `E` has no variant or associated item named `D`

error: unresolved link to `u8::not_found`
  --> $DIR/intra-link-errors.rs:60:6
   |
LL | /// [u8::not_found]
   |      ^^^^^^^^^^^^^ the builtin type `u8` has no associated item named `not_found`

error: unresolved link to `std::primitive::u8::not_found`
  --> $DIR/intra-link-errors.rs:64:6
   |
LL | /// [std::primitive::u8::not_found]
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the builtin type `u8` has no associated item named `not_found`

error: unresolved link to `Vec::into_iter`
  --> $DIR/intra-link-errors.rs:68:6
   |
LL | /// [type@Vec::into_iter]
   |      ^^^^^^^^^^^^^^^^^^^
   |      |
   |      this link resolves to the associated function `into_iter`, which is not in the type namespace
   |      help: to link to the associated function, add parentheses: `Vec::into_iter()`

error: unresolved link to `S`
  --> $DIR/intra-link-errors.rs:73:6
   |
LL | /// [S!]
   |      ^^
   |      |
   |      this link resolves to the struct `S`, which is not in the macro namespace
   |      help: to link to the struct, prefix with `struct@`: `struct@S`

error: unresolved link to `T::g`
  --> $DIR/intra-link-errors.rs:91:6
   |
LL | /// [type@T::g]
   |      ^^^^^^^^^
   |      |
   |      this link resolves to the associated function `g`, which is not in the type namespace
   |      help: to link to the associated function, add parentheses: `T::g()`

error: unresolved link to `T::h`
  --> $DIR/intra-link-errors.rs:96:6
   |
LL | /// [T::h!]
   |      ^^^^^ the trait `T` has no macro named `h`

error: unresolved link to `S::h`
  --> $DIR/intra-link-errors.rs:83:6
   |
LL | /// [type@S::h]
   |      ^^^^^^^^^
   |      |
   |      this link resolves to the associated function `h`, which is not in the type namespace
   |      help: to link to the associated function, add parentheses: `S::h()`

error: unresolved link to `m`
  --> $DIR/intra-link-errors.rs:103:6
   |
LL | /// [m()]
   |      ^^^
   |      |
   |      this link resolves to the macro `m`, which is not in the value namespace
   |      help: to link to the macro, add an exclamation mark: `m!`

error: aborting due to 20 previous errors

